--- a/frontend/src/assets/styles/BusSchedule.css
+++ b/frontend/src/assets/styles/BusSchedule.css
@@ -2,7 +2,7 @@
     width: 90%;
     margin: auto;
     text-align: center;
-    background: #ffffff;
+    background-color: #f5f5f5;
     padding: 10px;
     margin-top: 80px; 
     padding: 20px; 
