--- a/frontend/src/assets/styles/Navbar.css
+++ b/frontend/src/assets/styles/Navbar.css
@@ -22,6 +22,7 @@
     font-weight: bold;
     color: white;
     margin-right: 40px; /* Adjusting spacing for proper centering */
+    padding-top: 18px;
 }
 
 .menu-container {
