--- a/frontend/src/assets/styles/StudentHome.css
+++ b/frontend/src/assets/styles/StudentHome.css
@@ -6,7 +6,7 @@
 .student-home {
     position: relative;
     width: 360px; /* Mobile viewport width */
-    height: 640px; /* Mobile viewport height */
+    height: 640px;
     margin: 0 auto;
     overflow: hidden;
   }
@@ -43,6 +43,10 @@
     font-weight: bold;
     margin-bottom: 15px;
     color: white;
+}
+
+.upcoming-section .bus-card{
+    height: 150px;
 }
 
 
